css/style.css
/* Import google fonts*/
@import url(http://fonts.googleapis.com/css?family=Roboto:400,100);

* {
	/*display: block;*/
	padding: 0;
	margin: 0;
	-webkit-box-sizing:border-box;
	-moz-box-sizing:border-box;
	-ms-box-sizing:border-box;
	box-sizing:border-box;
}

html, body {
  margin: 0;
  padding: 0;
  height: 100%;
  font-family: 'Roboto', sans-serif;
  background: #FAF8FF;
  color: #d35400;
}

.cf:before,
.cf:after {
    content: "";
    display: table;
}
.cf:after {
    clear: both;
}
.cf {
    zoom: 1; /* For IE 6/7 (trigger hasLayout) */
}

#map-canvas {
	margin: 0 auto;
	padding: 0;
	height: 300px;
	width:100%;
	-webkit-transition:all 0.3s ease-in-out;
	-moz-transition:all 0.3s ease-in-out;
	-o-transition:all 0.3s ease-in-out;
	-ms-transition:all 0.3s ease-in-out;
	transition:all 0.3s ease-in-out;
}

#map-canvas:hover {
	/*-webkit-filter: blur(0);*/
}

.blur {
	-webkit-filter: blur(10px);
}

.main {
	margin: 0 auto;
	padding:1em;
	max-width:800px;
	margin-top:1.5em;
}
.main h1 {
	padding: 30px 0 0 0;
}

.alpha-banner {
	z-index: 999;
	display: block;
	top:0;
	left:0;
	width:100%;
	text-align: center;
	background-color: #c0392b;
	color:#fff;
	position: fixed;
}
	.alpha-banner p {
		padding: 1em;
	}

.postcode {
	display:none;
	position: absolute;
	left:0;
	top:200px;
	width:100%;
	text-align: center;
}
	.postcode h1 {
		font-size: 24px;
		margin-bottom: 10px;
	}

	.postcode-input {
		background-color: rgba(0,0,0,0.1);
		text-align: center;
		width: 200px;
		padding:0.5em;
		font-size: 20px;
		border: 1px solid #999;
		border-radius:15px;
	}
.postcode-button {
	margin-top: 1em;
	-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
	-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
	box-shadow:inset 0px 1px 0px 0px #ffffff;
	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #f9f9f9), color-stop(1, #e9e9e9) );
	background:-moz-linear-gradient( center top, #f9f9f9 5%, #e9e9e9 100% );
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f9f9f9', endColorstr='#e9e9e9');
	background-color:#f9f9f9;
	border-radius:20px;
	border:1px solid #dcdcdc;
	display:inline-block;
	color:#333;
	font-size: 12px;
	height:30px;
	line-height:30px;
	width:130px;
	text-align:center;
	text-shadow:1px 1px 0px #ffffff;
}
.postcode-button:hover {
	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #e9e9e9), color-stop(1, #f9f9f9) );
	background:-moz-linear-gradient( center top, #e9e9e9 5%, #f9f9f9 100% );
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#e9e9e9', endColorstr='#f9f9f9');
	background-color:#e9e9e9;
}.postcode-button:active {
	position:relative;
	top:1px;
}

.bus-stop {
	text-align: center;
	margin-bottom:1.3em;
}

.display-timetable {
	margin-top: 20px;
}

	.display-list {
		list-style: none;
	}

	.display-list li {
		background-color: rgba(0,0,0,0.1);
		padding: 1em;
		border-top:1px solid #666;
		border-bottom:1px solid #666;
		height: 100px;
	}

	.display-list .close {
		/*background-color: rgba(255,0,0,0.3);*/
		background-color: #c0392b;
		color: white;
	}
	.display-list .not-so-close {
		background-color: rgba(0,255,0,0.3);
	}

	.display-list .number, .display-list .time  {
		font-size: 36px;
		font-weight: bold;
	}
	.display-list .time {
		float: right;
	}
	.display-list .towards-text {
		font-size: 20px;
	}
	.display-list .top, .display-list .bottom {
		display: block;
		width:100%;
	}

footer {
	margin-top: 20px;
	border-top:1px solid rgba(0,0,0,0.2);
	color:#666;
	padding:1em 0;
	text-align: right;
}
	footer a {
		text-decoration: none;
		color:#aaa;
		-webkit-transition:all 0.2s ease-in-out;
		-moz-transition:all 0.2s ease-in-out;
		-o-transition:all 0.2s ease-in-out;
		-ms-transition:all 0.2s ease-in-out;
		transition:all 0.2s ease-in-out;
	}
	footer a:hover {
		text-decoration: underline;
		color:#666;
	}

@media (max-width: 515px) {
	.postcode h1 {
		font-size: 15px;
	}
	.display-list .number, .display-list .time {
		font-size: 30px;
		font-style: bold;
	}
	.display-list .towards-text {
		font-size:15px;
	}

}

@media (max-width: 320px) {
	h2 {
		font-size: 16px
	}
	.alpha-banner {
		font-size: 10px;
	}
	.main {
		padding:.5em 0;
		width:100%;
	}
	header p {
		font-size: 7px;
	}
	#map-canvas {
		height: 200px;
	}
	.postcode {
		top:110px;
	}
}

